# simple-tps

./: .dockerignore  .env.example  .gitignore  DEV_LOG.md  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
examples/demo-project/: project.json
examples/scripts/: import_eclipse_dicom_patient.py  inspect_project.py
schema/: project.schema.json
src/simple_tps/: __init__.py  cli.py  project.py  web.py
src/simple_tps/web_static/: app.js  index.html  styles.css  tree_app.js
tests/: test_project.py
